@@ -108,8 +108,10 @@ let _ =
     (hash (Hash.sha3 384) 4000000 16);
   time_fn "SHA-3 512, 64_000_000 bytes, 16-byte chunks"
     (hash (Hash.sha3 512) 4000000 16);
+  time_fn "BLAKE2b 512, 64_000_000 bytes, 16-byte chunks"
+    (hash (Hash.blake2b 512) 4000000 16);
   time_fn "RIPEMD-160, 64_000_000 bytes, 16-byte chunks"
-    (hash (Hash.sha256()) 4000000 16);
+    (hash (Hash.ripemd160()) 4000000 16);
   time_fn "MD5, 64_000_000 bytes, 16-byte chunks"
     (hash (Hash.md5()) 4000000 16);
   time_fn "AES CMAC, 64_000_000 bytes, 16-byte chunks"
